syntax = "proto3";

package todoPackage;

message TodoItem{
    int32 id = 1;
    string text = 2;
}

message TodoItems{
    repeated TodoItem todoItems = 1;
}

message parameterLess {}

service Todo {
    rpc createTodo( TodoItem ) returns ( TodoItem );
    // In protoc, there are no functions which take no input, so we have to define another message called parameterLess
    rpc readTodos (parameterLess) returns (TodoItems);
}


